Fix page-header z-index issue

--- a/sass/blocks/_stock-page-dashboard.sass
+++ b/sass/blocks/_stock-page-dashboard.sass
@@ -17,8 +17,7 @@ $block: ".stock-page-dashboard"
 #{$block}
   display: block
   width: 100%
-    display: block
-    width: 100%
+  overflow: hidden
 
 
   // $Page dashboard group
