--- a/sass/blocks/_stock-page-header.sass
+++ b/sass/blocks/_stock-page-header.sass
@@ -20,6 +20,7 @@ $block: ".stock-page-header"
   left: 0
   bottom: 0
   right: auto
+  z-index: 100
   display: block
   width: 270px
   background-color: #243C5C
